[gd_scene load_steps=4 format=3 uid="uid://cmptfoife2wui"]

[ext_resource type="FontFile" path="res://resources/fonts/test_font.tres" id="1"]
[ext_resource type="Script" uid="uid://smuwho6e2ol8" path="res://LevelEditor/EditorTypeSelect.gd" id="2"]
[ext_resource type="PackedScene" path="res://TransitionScene/TransitionScreen.tscn" id="3"]

[node name="EditorTypeSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 3.0
offset_right = -2.0
offset_bottom = 3.0
script = ExtResource("2")

[node name="BackButton" type="Button" parent="."]
visible = false
offset_left = 15.0
offset_top = 15.0
offset_right = 289.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("1")
text = "Back to level options"

[node name="LevelInfoContainer" type="GridContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -367.0
offset_top = -151.0
offset_right = 367.0
offset_bottom = 151.0
theme_override_constants/v_separation = 9
theme_override_constants/h_separation = 4
columns = 2
__meta__ = {
"_edit_group_": true
}

[node name="SongTitleLabel" type="Label" parent="LevelInfoContainer"]
offset_top = 5.0
offset_right = 181.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("1")
text = "Song Title:"

[node name="SongTitleEdit" type="LineEdit" parent="LevelInfoContainer"]
offset_left = 185.0
offset_right = 734.0
offset_bottom = 45.0
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1")

[node name="SongArtistLabel" type="Label" parent="LevelInfoContainer"]
offset_top = 59.0
offset_right = 181.0
offset_bottom = 94.0
theme_override_fonts/font = ExtResource("1")
text = "Song Artist:"

[node name="SongArtistEdit" type="LineEdit" parent="LevelInfoContainer"]
offset_left = 185.0
offset_top = 54.0
offset_right = 734.0
offset_bottom = 99.0
theme_override_fonts/font = ExtResource("1")

[node name="SongBPMLabel" type="Label" parent="LevelInfoContainer"]
offset_top = 113.0
offset_right = 181.0
offset_bottom = 148.0
theme_override_fonts/font = ExtResource("1")
text = "Song BPM:"

[node name="SongBPMEdit" type="LineEdit" parent="LevelInfoContainer"]
offset_left = 185.0
offset_top = 108.0
offset_right = 734.0
offset_bottom = 153.0
theme_override_fonts/font = ExtResource("1")

[node name="SongFileLabel" type="Label" parent="LevelInfoContainer"]
offset_top = 165.0
offset_right = 181.0
offset_bottom = 200.0
theme_override_fonts/font = ExtResource("1")
text = "Song Audio:"

[node name="SongFileOpen" type="Button" parent="LevelInfoContainer"]
offset_left = 388.0
offset_top = 162.0
offset_right = 531.0
offset_bottom = 203.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1")
text = "Open File"

[node name="SongCoverLabel" type="Label" parent="LevelInfoContainer"]
offset_top = 215.0
offset_right = 181.0
offset_bottom = 250.0
theme_override_fonts/font = ExtResource("1")
text = "Cover Image:"

[node name="SongCoverSelect" type="Button" parent="LevelInfoContainer"]
offset_left = 388.0
offset_top = 212.0
offset_right = 531.0
offset_bottom = 253.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1")
text = "Open File"

[node name="ContinueButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.732
anchor_right = 0.5
anchor_bottom = 0.732
offset_left = -134.0
offset_top = -10.2
offset_right = 132.0
offset_bottom = 35.8
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1")
text = "Continue"

[node name="ImageFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -498.0
offset_top = -269.0
offset_right = 503.0
offset_bottom = 266.0
mouse_filter = 2
window_title = "Open a File"
mode = 0
access = 2
filters = PackedStringArray("*.png, *.jpg, *.jpeg ; Supported Images")

[node name="FileDialog" type="FileDialog" parent="."]
offset_left = 16.0
offset_top = 31.0
offset_right = 1016.0
offset_bottom = 567.0
custom_minimum_size = Vector2(150, 52.5)
mouse_filter = 2
window_title = "Open a File"
mode = 0
access = 2
filters = PackedStringArray("*.mp3 ; MP3 Audio")

[node name="LevelOptionContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -242.5
offset_top = -114.0
offset_right = 242.5
offset_bottom = 114.0
__meta__ = {
"_edit_group_": true
}

[node name="NewLevel" type="Button" parent="LevelOptionContainer"]
offset_right = 485.0
offset_bottom = 103.0
pivot_offset = Vector2(-656, 187)
size_flags_horizontal = 3
size_flags_vertical = 3
text = "New Level"

[node name="Label" type="Label" parent="LevelOptionContainer"]
offset_top = 107.0
offset_right = 485.0
offset_bottom = 121.0

[node name="EditLevel" type="Button" parent="LevelOptionContainer"]
offset_top = 125.0
offset_right = 485.0
offset_bottom = 228.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Edit Level"

[node name="WrongFileWarning" type="AcceptDialog" parent="."]
offset_top = 12.0
offset_right = 83.0
offset_bottom = 70.0
dialog_text = "Incorrect file format selected, please only pick valid file"

[node name="BPMInput" type="Popup" parent="."]
offset_left = 275.0
offset_top = 268.0
offset_right = 714.0
offset_bottom = 542.0

[node name="LineEdit" type="LineEdit" parent="BPMInput"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -13.0
offset_right = 118.0
offset_bottom = 13.0

[node name="BPMConfirm" type="Button" parent="BPMInput"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -51.5
offset_top = -95.0
offset_right = 51.5
offset_bottom = -60.0
text = "Confirm"

[node name="Label" type="Label" parent="BPMInput"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.5
offset_top = 91.0
offset_right = 68.5
offset_bottom = 105.0
text = "Enter Song BPM"
align = 1

[node name="BackMenuButton" type="Button" parent="."]
offset_left = 8.0
offset_top = 6.0
offset_right = 204.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("1")
text = "Back to menu"

[node name="TransitionScreen" parent="." instance=ExtResource("3")]

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="LevelInfoContainer/SongFileOpen" to="." method="_on_SongFileOpen_pressed"]
[connection signal="pressed" from="LevelInfoContainer/SongCoverSelect" to="." method="_on_SongCoverSelect_pressed"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="file_selected" from="ImageFileDialog" to="." method="_on_ImageFileDialog_file_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="LevelOptionContainer/NewLevel" to="." method="_on_NewLevel_pressed"]
[connection signal="pressed" from="LevelOptionContainer/EditLevel" to="." method="_on_EditLevel_pressed"]
[connection signal="pressed" from="BPMInput/BPMConfirm" to="." method="_on_BPMConfirm_pressed"]
[connection signal="pressed" from="BackMenuButton" to="." method="_on_BackMenuButton_pressed"]
